--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,11 @@
 Fble:
-* [lang] Switch to new concrete syntax for func
-  - use block for func_types.
-  - use block for func_values.
-
-* [lang] Flesh out spec for new fble.
-
 * [lang] Migrate fble to new spec
   - migrate concrete syntax to a subset of the new spec
+   + type let binding
+   + inferred types
   - make FbleType part of FbleExpr
+
+* [lang] Flesh out spec for new fble.
 
 * [perf] Avoid copying captured contexts
   - particularly for multi-arg functions.
