--- a/TODO.txt
+++ b/TODO.txt
@@ -9,6 +9,7 @@ Fble:
 
 * [perf] Avoid copying captured contexts
   - particularly for multi-arg functions.
+  - the trick is tracking references to values properly and efficiently.
 
 * [test] Fix 8.3-07
  - debugging: S<T> ==> S'<T'>
