Remove kind from type fields.
Because you can always infer the kind from the type.

--- a/langs/fble.new.txt
+++ b/langs/fble.new.txt
@@ -65,7 +65,7 @@ kind ::=
 type ::= expr ;
 
 m_type ::= 
-   '@'    (* implicit_type *)
+   kind   (* implicit_type *)
  | type   (* explicit_type *)
  ;
 
