Rename Compile CompileExpr.
To more clearly distinguish it from CompileType, now that FbleType and
FbleExpr are the same thing.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 Fble:
 * [lang] Migrate fble to new spec
-  - make FbleType part of FbleExpr
+  - fix todo in compile type as expr
+  - fix todo in compile expr as type
+  - dedup abstract syntax entities.
 
 * [lang] Flesh out spec for new fble.
 
