make type_name a token.
So that the value of the type name includes the trailing '@' so we can
distinguish between names "foo" and "foo@" in the abstract syntax in addition
to the concrete syntax.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 Fble:
 * [lang] Migrate fble to new spec
-  - fix todo in compile type as expr
-  - fix todo in compile expr as type
-  - dedup abstract syntax entities.
+  - add typeof to abstract syntax.
+  - dedup normal and type fields in abstract syntax.
+  - dedup rest of supported abstract syntax.
 
 * [lang] Flesh out spec for new fble.
 
