Improve compilation of poly and poly apply type.
Though I'm not convinced this is the right solution.

Down to 9 test failures.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,10 @@
 Fble:
 * [lang] Migrate fble to new spec
   - fix support for polymorphism.
+    - Compile poly and poly apply as functions?
+    - Understand and fix infinite loop in PrintType
+    - Add unit test to capture type error seen in List.fble.
+    - Restrict TYPE_TYPE to only apply to basic kinds.
   - clean up merge of FbleType and FbleExpr - don't pretend they are two
     different things.
 
