Simplify grammar for choices.
This means you can have implicit conditionals, such as:
  ?(s; a, b, c)

Instead of:
  ?(s; a: a, b: b, c: c)

I'm not sure if that's a good idea or not. But certainly the grammar for the
concrete syntax is simpler if we can reuse the same choice logic as for
implicit type struct values.

--- a/langs/fble.txt
+++ b/langs/fble.txt
@@ -120,6 +120,91 @@ Example:
 Returns the value passed to the struct at the corresponding field position
 when the struct was constructed.
 
+3.5 Struct Eval
+---------------
+Abstract Syntax:
+  Expr ::= struct_eval (namespace :: Expr) (body :: Expr)
+
+Concrete Syntax:
+  expr ::= expr '{' stmt '}'
+
+Example:
+  @(True, False, And) { And(True, False); }
+
+Struct eval evaluates an expression in a context where the only variables in
+scope are those defined by the fields of a struct value. This allows you to
+hide names in the current namespace when evaluating an expression. The
+namespace must evaluate to a struct value. Then the body of the struct_eval
+will be evaluated in a scope of variables which are the fields of the
+namespace value and no others.
+
+Struct eval is typically used when defining a module to hide all external
+variables except those you need for the module. This allows the module to be
+reused in many different contexts. For example, a module that only requires use
+of the StdLib library would be written:
+
+@(StdLib) {
+  ...
+};
+
+That way, regardless of what other libraries are in scope, there will be no
+name conflicts between what is already in scope and what is being defined by
+the module itself.
+
+3.6 Struct Import
+-----------------
+Abstract Syntax:
+  Expr ::= struct_import (namespace :: Expr) (body :: Expr)
+
+Concrete Syntax:
+  stmt ::= expr ';' stmt
+
+Example:
+  @(And); And(True, False);
+
+Struct import is a short hand form of let expression that allows you to
+introduce new variables in scope. The namespace must evaluate to a struct
+value. Then the body of import is evaluated in a namespace augmented with the
+fields of the namespace struct.
+
+The advantage of using namespace import over using a regular let expression is
+the convenience of not having to explicitly write the types of the variables
+being defined and being able to define a group of variables concisely.
+
+For example, assuming a namespace struct of boolean operations:
+  @ BoolOps@ = *(Bool@ True, Bool@ False, \(Bool@ x; Bool@) Not);
+  BoolOps@ ops = ...
+
+The following two are equivalent:
+1. Bool@ True = ops.True;
+   Bool@ False = ops.False;
+   \(Bool@ x; Bool@) Not = ops.Not;
+   ...
+
+2. ops;
+   ...
+  
+The typical use of struct import is to import values from an existing
+namespace into the current namespace using a combination of struct
+import, struct eval, and implict type struct value construction. For example:
+
+  StdLib { @(Bool, Maybe, List); };
+  ...
+
+Has the effect of importing just Bool, Maybe, and List from StdLib.
+
+Note that you can also make use of this construct with implicit type struct
+values for defining a variable without having to explicitly specify its type.
+This is useful for referring to a namespace without having to provide an
+explicit type for the namespace. For example:
+
+  @(StdLib: &StdLib); ...
+
+Or, as another example, the following two are equivalent:
+
+1. Bool@ True = Bool@(true: Unit@()); ...
+2. @(True: Bool@(true: Unit@())); ...
+
 4. Unions
 ---------
 A union value is a particular value chosen amongst a group of possible values.
@@ -637,88 +722,6 @@ of the object. Note that the object of type field access is never evaluated.
 Its expression is used solely to determine the type from which the type field
 is read.
 
-9.4 Namespace Eval
-------------------
-Abstract Syntax:
-  Expr ::= namespace_eval (namespace :: Expr) (body :: Expr)
-
-Concrete Syntax:
-  expr ::= expr '{' stmt '}'
-
-Example:
-  @(True, False, And) { And(True, False); }
-
-Namespace eval allows you to hide names in the current namespace when
-evaluating an expression. The namespace must evaluate to a struct value. Then
-the body of the namespace_eval will be evaluated in a scope of variables which
-are the fields of the namespace value and no others.
-
-Namespace eval is typically used when defining a module to hide all external
-variables except those you need for the module. This allows the module to be
-reused many different contexts. For example, a module that only requires use
-of the StdLib library would be written:
-
-@(StdLib) {
-  ...
-};
-
-That way, regardless of what other libraries are in scope, there will be no
-name conflicts between what is already in scope and what is being defined by
-the module itself.
-
-9.5 Namespace Import
---------------------
-Abstract Syntax:
-  Expr ::= namespace_import (namespace :: Expr) (body :: Expr)
-
-Concrete Syntax:
-  stmt ::= expr ';' stmt
-
-Example:
-  @(And); And(True, False);
-
-Namespace import is a short hand form of let expression that allows you to
-introduce new variables in scope. The namespace must evaluate to a struct
-type. Then the body of import is evaluated in a namespace augmented with the
-fields of the namespace struct.
-
-The advantage of using namespace import over using a regular let expression is
-the convenience of not having to explicitly write the types of the variables
-being defined and being able to define a group of variables concisely.
-
-For example, assuming a namespace of boolean operations:
-  @ BoolOps@ = *(Bool@ True, Bool@ False, \(Bool@ x; Bool@) Not);
-  BoolOps@ ops = ...
-
-The following two are equivalent:
-1. Bool@ True = ops.True;
-   Bool@ False = ops.False;
-   \(Bool@ x; Bool@) Not = ops.Not;
-   ...
-
-2. ops;
-   ...
-  
-The typical use of namespace import is to import values from an existing
-namespace into the current namespace using a combination of namespace
-import, namespace eval, and anonymous struct construction. For example:
-
-  StdLib { @(Bool, Maybe, List); };
-  ...
-
-Has the effect of importing just Bool, Maybe, and List from StdLib.
-
-Note that you can also make use of this construct with anonymous struct values
-for defining a variable without having to explicitly specify its type. This
-is useful for referring to a namespace without having to provide an explicit
-type for the namespace. For example:
-
-  @(StdLib: &StdLib); ...
-
-Or, as another example, the following two are equivalent:
-
-1. Bool@ True = Bool@(true: Unit@()); ...
-2. @(True: Bool@(true: Unit@())); ...
 
 9.6 Include
 -----------
