--- a/langs/fble.txt
+++ b/langs/fble.txt
@@ -297,7 +297,7 @@ Abstract Syntax:
   Type ::= func_type (arg :: Type) (return :: Type)
 
 Concrete Syntax:
-  type ::= '[' type ']' '{' type_stmt '}'
+  expr ::= '[' type ']' '{' stmt '}'
 
 Examples:
   [Int@][Int@]{Bool@;}
@@ -305,7 +305,7 @@ Examples:
 The function type describes the type of a function value by specifying the
 function's argument and return types.
 
-Function arguments can be any kind of value, including structs, unions,
+Function arguments can be any kind of value, including types, structs, unions,
 functions, or processes.
 
 Two function types are equal if they take the same argument and return types.
@@ -316,7 +316,7 @@ Abstract Syntax:
   Expr ::= func_value (arg :: (Type, Name)) (body :: Expr)
 
 Concrete Syntax:
-  expr ::= [type name] '{' stmt '}'
+  expr ::= [type name] block
 
 Example:
   [Bool@ a] { ?(a; true: False, false: True); }
@@ -327,16 +327,8 @@ the function is inferred to be the type of the body of the function. The
 argument name chosen when defining a function has no effect on the type of
 the function.
 
-Rationale for Concrete Syntax: The body of the function requires use of braces
-to avoid ambiguity that would arise otherwise with an expression such as:
-
-  [T@ x] f [y]
-
-In this case it isn't clear if the argument 'y' is being applied to the
-function [T@ x] f, or to the function f.
-
-5.3 Application
----------------
+5.3 Function Application
+------------------------
 Abstract Syntax:
   Expr ::= apply (func :: Expr) (arg :: Expr)
 
@@ -346,7 +338,7 @@ Concrete Syntax:
 Example:
   foo[x]
 
-The application expression is used to apply a function to an argument.  The
+The application expression is used to apply a function to an argument. The
 supplied argument must match the type of argument specified for the function.
 The application expression evaluates to the value of the body of the function
 in the context of the supplied argument.
